--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - "pip install -q -r test-requirements.txt"
 
 
-before_script: "flake8 --ignore=E402 --max-line-length=100  --show-source --count ."
+before_script: "flake8 --ignore=E402 --max-line-length=100 --builtins=FileNotFoundError,PermissionError --show-source --count ."
 
 script:
   - "python setup.py test"
