--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ language: python
 python:
   - "2.7"
   - "3.6"
+  - "3.8"
 
 install:
   - "pip install -q -r requirements.txt"
   - "pip install -q -r test-requirements.txt"
 
 
-before_script: "flake8 --ignore=E402 --max-line-length=100 --builtins=FileNotFoundError,PermissionError --show-source --count ."
+before_script: "flake8 --max-line-length=100  --show-source --count ."
 
 script:
   - "python setup.py test"
